# state_history

./: .clang-format  .gitignore  .gitmodules  xmake.lua
event_sourcing/: CLAUDE.md  CMakeLists.txt  run_tests.sh
event_sourcing/include/: components.h  state_history.h
event_sourcing/src/: branch_entity_simple.cpp  components.cpp  main.cpp  stochastic_world_explorer.cpp  test_entity_lifecycle.cpp  test_entity_simple.cpp  test_event_sourcing.cpp  test_relationships.cpp  test_step_forward.cpp  test_track_entity_order.cpp
event_sourcing/templates/: state_history.h.j2
neo_network/client/: CMakeLists.txt
neo_network/client/src/: CMakeLists.txt  main.cpp
neo_network/server/: CMakeLists.txt
neo_network/server/src/: main.cpp
neo_timeline/: CMakeLists.txt  generate_state_history.py
neo_timeline/assets/: freq.py  frequent_colors.txt
neo_timeline/include/: components.h  state_history.h
neo_timeline/src/: components.cpp  main.cpp
neo_timeline/templates/: state_history.h.j2
project_template_ui/: CMakeLists.txt
project_template_ui/src/: main.cpp
snapshot/include/: serialize.h  state_history.h
snapshot/source/: state_history.cpp
